--- a/index.html
+++ b/index.html
@@ -59,9 +59,25 @@
                 </div>
             </div>
             
-            <!-- <div class="mySlides fade">
-              <div class="numbertext">3 / 3</div>
-            </div> -->
+            <div class="mySlides fade">
+              <div class="thirdHeader">
+                <nav class="thirdnavbar">
+                    <li class="thirdmenu">
+                        <ul>About</ul>
+                        <ul>Services</ul>
+                        <ul>Pricing</ul>
+                        <ul>Testimonies</ul>
+                        <ul>Contact</ul>
+                    </li>
+                </nav>
+                <div class="thirdlogo">
+                    <img class="thirdpicture" src="helloworld.png">
+                </div>
+                <div class="thirdimage">
+                    <h1 class="thirdtitle">Welcome to our corner of the world, explore more below.</h1>
+                </div>
+              </div>
+            </div>
             
             <a class="prev" onclick="plusSlides(-1)">❮</a>
             <a class="next" onclick="plusSlides(1)">❯</a>
