Responsive version with hamburger menu

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
     <body>
@@ -18,8 +19,24 @@
 
             <div class="mySlides fade">
                 <div class="firstHeader">
+
+                    <!-- hamburger menu -->
+                    <div class="topnav">
+                        <img class="responsivemenu" src="helloworld.png">
+                        <div id="myLinks1">
+                          <a>About</a>
+                          <a>Services</a>
+                          <a>Pricing</a>
+                          <a>Testimonies</a>
+                          <a>Contact</a>
+                        </div>
+                        <a href="javascript:void(0);" class="icon" onclick="myFunction('myLinks1')">
+                          <i class="fa fa-bars"></i>
+                        </a>
+                    </div>
+                    <!-- hamburger menu -->
                     <nav class="navbar">
-                        <img class="logo" src="firstlogo.png">
+                        <img class="logo" src="helloworld.png">
                         <li class="menu">
                             <ul>About</ul>
                             <ul>Services</ul>
@@ -28,11 +45,7 @@
                             <ul>Contact</ul>
                         </li>
                     </nav>
-                    <div class="toflex">
-                        <div class="changeposition">
-                            <div class="roundshape"></div>
-                            <div class="shapedPicture"></div>
-                        </div>
+                    <div class="firstbackground">
                         <h1 class="mainsentence">Welcome to our corner of the world, explore more below.</h1>
                     </div>
                 </div>
@@ -40,6 +53,21 @@
             
             <div class="mySlides fade">
                 <div class="secondHeader">
+                     <!-- hamburger menu -->
+                     <div class="topnav">
+                        <img class="responsivemenu" src="helloworld.png">
+                        <div id="myLinks2">
+                          <a>About</a>
+                          <a>Services</a>
+                          <a>Pricing</a>
+                          <a>Testimonies</a>
+                          <a>Contact</a>
+                        </div>
+                        <a href="javascript:void(0);" class="icon" onclick="myFunction('myLinks2')">
+                          <i class="fa fa-bars"></i>
+                        </a>
+                    </div>
+                    <!-- hamburger menu -->
                     <nav class="secondnavbar">
                         <li class="firstmenu">
                             <ul>About</ul>
@@ -61,6 +89,21 @@
             
             <div class="mySlides fade">
               <div class="thirdHeader">
+                 <!-- hamburger menu -->
+                    <div class="topnav">
+                        <img class="responsivemenu" src="helloworld.png">
+                        <div id="myLinks3">
+                          <a>About</a>
+                          <a>Services</a>
+                          <a>Pricing</a>
+                          <a>Testimonies</a>
+                          <a>Contact</a>
+                        </div>
+                        <a href="javascript:void(0);" class="icon" onclick="myFunction('myLinks3')">
+                          <i class="fa fa-bars"></i>
+                        </a>
+                    </div>
+                    <!-- hamburger menu -->
                 <nav class="thirdnavbar">
                     <li class="thirdmenu">
                         <ul>About</ul>
