--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://kit.fontawesome.com/49f2305173.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -182,6 +183,102 @@
             <span class="dot dot-carroussel2" onclick="currentSlide(3, 1)"></span> 
         </div>
 
+        <!-- THIRD CARROUSSEL -->
+
+        <div class="firstcontactform">
+            <div class="firstcontactleft">
+                <div class="contactdetails" >
+                    <h1>Contact us</h1>
+                    <h3>Get in touch, we are user friendly.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                    <h1>Details</h1>
+                    <p>10 rue de l'Université</p>
+                    <p>75000 Paris</p>
+                    <p><i class="fa-solid fa-square-phone"></i> 06 12 34 56 78</p>
+                    <p><i class="fa-solid fa-envelope"></i> contact@landingpage.com</p>
+                    <p><i class="iconfirst fa-brands fa-square-facebook"></i><i class="iconfirst fa-brands fa-square-twitter"></i><i class="iconfirst fa-brands fa-square-instagram"></i></p>
+                </div>
+            </div>
+            <div class="firstcontactright">
+                <div class="firsttitleandform">
+                    <h1 class="firstformtitle">Send us a message</h1>
+                    <form>
+                        <!-- <label for="name">Your name</label><br> -->
+                        <input type="text" class="name1" id="name" name="name" placeholder="Your name"><br>
+                        <!-- <label for="email">E-mail</label><br> -->
+                        <input type="email" class="email1" id="email" name="email" placeholder="E-mail"><br>
+                        <!-- <label for="message">Your message</label><br> -->
+                        <input type="text" class="message1" id="message" name="message" placeholder="Your message"><br><br>
+                        <input class="firstcontactbutton" type="submit" value="Submit">
+                    </form> 
+                </div>
+            </div>
+        </div>
+
+        <div class="secondcontactform">
+            <div class="secondtitlesform">
+                <h1>Get in touch with us.</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+            </div>
+            <div class="secondformtoflex">
+                <div class="secondformleft">
+                    <div class="secondformdatas">
+                        <h3>Adress</h3>
+                        <p>10 rue de l'Université</p>
+                        <p>75000 Paris</p>
+                        <h3>Others</h3>
+                        <p><i class="fa-solid fa-square-phone"></i> 06 12 34 56 78</p>
+                        <p><i class="fa-solid fa-envelope"></i> contact@landingpage.com</p>
+                        <h3>Social medias</h3>
+                        <p><i class="iconfirst fa-brands fa-square-facebook"></i><i class="iconfirst fa-brands fa-square-twitter"></i><i class="iconfirst fa-brands fa-square-instagram"></i></p>
+                    </div>
+                </div>
+                <div class="secondformright">
+                    <form class="secondform">
+                        <label for="name">Your name</label><br>
+                        <input type="text" class="name2" id="name" name="name" placeholder="Your name"><br>
+                        <label for="email">E-mail</label><br>
+                        <input type="email" class="email2" id="email" name="email" placeholder="E-mail"><br>
+                        <label for="message">Your message</label><br>
+                        <input type="text" class="message2" id="message" name="message" placeholder="Your message"><br><br>
+                        <input class="secondcontactbutton" type="submit" value="Submit">
+                    </form> 
+                </div>
+            </div>
+        </div>
+
+        <!-- THIRD CONTACT FORM -->
+
+        <div class="thirdcontactform">
+            <h1 class="thirdcontacttitle">Get in touch with us!</h1>
+            <div class="thirddatas">
+                <div class="thirddata">
+                    <i class="icon3 fa-solid fa-square-phone"></i>
+                    <p class="thirdinfos">+33 6 12 34 56 78</p>
+                </div>
+                <div class="vl"></div>
+                <div class="thirddata">
+                    <i class="icon3 fa-solid fa-location-dot"></i>
+                    <p class="thirdinfos">10 rue de l'Université <br>75000 Paris</p>
+                </div>
+                <div class="vl"></div>
+                <div class="thirddata">
+                    <i class="icon3 fa-solid fa-envelope"></i>
+                    <p class="thirdinfos">contact@landingpage.com</p>
+                </div>
+            </div>
+            <p class="thirdcontacttext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <form class="thirdform">
+                <input type="text" class="name3" id="name" name="name" placeholder="Your name"><br>
+                <input type="email" class="email3" id="email" name="email" placeholder="E-mail"><br>
+                <input type="text" class="message3" id="message" name="message" placeholder="Your message"><br>
+                <input class="thirdcontactbutton" type="submit" value="Submit">
+            </form> 
+            <div class="thirdcontactmedia">
+                <p>Connect with us !</p>
+                <i class="iconfirst fa-brands fa-square-facebook"></i><i class="iconfirst fa-brands fa-square-twitter"></i><i class="iconfirst fa-brands fa-square-instagram"></i>
+            </div>
+        </div>
 
         <script src="index.js"></script>
     </body>
